fixed horizontal scrolling and layout

--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -4,7 +4,6 @@
 
     --primary-color: #183153;
     --secondary-color:#e63946;
-
 }
 
 
@@ -20,10 +19,9 @@ body{
     font-family: var(--body-font);
 }
 .container{
-    max-width: 1200px;
+    max-width: 1150px;
     margin: 0 auto;
     padding: 10px 20px;
-
     width: auto;
 }
 li{
@@ -32,13 +30,17 @@ li{
 a{
     text-decoration: none;
 }
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 
 
 /* NAVIGATION */
 .logo img{
-    max-width: 50px;
+    max-width: 60px;
     width: 100%;
     height: auto;
 }
@@ -74,9 +76,12 @@ a{
     font-size: 1.2rem;
     transition: .4s;
 }
-.nav-item:hover, .business-card a:hover{
-    color: #ae474f;
+.nav-item:hover{
+    color: var(--secondary-color);
     font-size: 1.22rem;
+}
+.business-card a:hover{
+    color: var(--secondary-color);
 }
 .nav-item.active{
     position: relative;
@@ -93,20 +98,18 @@ a{
 
 .nav-menu{
     position: fixed;
-    top: 50px;
+    top:65px;
     left: -200%;
-    z-index: 1001;
     width: 100%;
     height: 100%;
+    z-index: 1001;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    text-align: center;
     gap: 70px;
     background: #dad7d7;
     transition: left .5s;
-    /* proper centering */
 }
 .nav-menu.active{
     left: 0;
@@ -172,9 +175,8 @@ h1{
 
 
 /* DIRECTORY SECTION */
-section.directory-section{
-    margin: 60px 0;
-    /* background: ; */
+ .directory-section{
+    margin: 60px auto;
 }
 .directory-nav{
     display: flex;
@@ -185,7 +187,7 @@ section.directory-section{
     background: var(--primary-color);
     max-width: 1300px;
     margin: 0 auto;
-}
+} 
 .directory-nav button{
     background:none;
     border: none;
@@ -257,12 +259,12 @@ section.directory-section{
 
 /* FOOTER */
 footer{
-    padding: 10px 20px;
+    padding: 10px;
     margin: 0 auto;
     background: var(--primary-color);
 }
 .footer{
-    max-width: 1250px;
+    max-width: 1100px;
     display: flex;
     justify-content: center;
     flex-direction: column;
